--- a/style.css
+++ b/style.css
@@ -1,100 +1,1790 @@
-/* Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/* Landing Page */
 
-body {
-  font-family: 'Poppins', sans-serif;
-  background-color: #5b616e;
-  color: white;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-/* Main layout */
-.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 90%;
-  max-width: 1200px;
-}
 
-/* Logo styling */
-.logo img {
-  width: 500px;
-  height: auto;
-}
+box-sizing: border-box;
 
-/* Button menu styling */
-.menu {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-  animation: fadeIn 1.5s ease-in forwards;
-  opacity: 0;
-  animation-delay: 0.5s;
-}
 
-/* Reusable button style */
-.btn {
-  text-decoration: none;
-  padding: 15px 30px;
-  background-color: #ff0000;
-  color: black;
-  font-weight: bold;
-  border-radius: 50px;
-  font-size: 16px;
-  text-align: center;
-  transition: background 0.3s ease;
-}
 
-.btn:hover {
-  background-color: #ff0000;
-}
+position: relative;
 
-/* Fade in animation */
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-  }
-}
-.hero-message {
-  max-width: 800px;
-  margin: 60px auto;
-  text-align: center;
-  padding: 20px;
-  animation: fadeInUp 1.5s ease forwards;
-  opacity: 0;
-}
+width: 1535px;
 
-.hero-message h1 {
-  font-size: 3rem;
-  font-weight: 800;
-  color: #ff0000; /* Bold yellow */
-  margin-bottom: 20px;
-  font-family: 'Poppins', sans-serif;
-  text-shadow: 2px 2px #111;
-}
+height: 789px;
 
-.hero-message p {
-  font-size: 1.2rem;
-  color: #f0f0f0;
-  line-height: 1.6;
-  font-family: 'Poppins', sans-serif;
-}
+overflow-y: scroll;
 
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(40px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+
+
+background: #2F303A;
+
+
+
+
+
+/* Untitled design (3) 2 */
+
+
+
+box-sizing: border-box;
+
+
+
+position: absolute;
+
+width: 1627px;
+
+height: 679px;
+
+left: -45px;
+
+top: -27px;
+
+
+
+background: url(Untitled design (3).png);
+
+mix-blend-mode: lighten;
+
+border: 1px solid #000000;
+
+border-radius: 10px;
+
+
+
+
+
+/* Rectangle 46 */
+
+
+
+position: absolute;
+
+width: 224px;
+
+height: 35px;
+
+left: 981px;
+
+top: 201px;
+
+
+
+background: #F52929;
+
+border-radius: 5px;
+
+
+
+
+
+/* Rectangle 45 */
+
+
+
+position: absolute;
+
+width: 224px;
+
+height: 35px;
+
+left: 981px;
+
+top: 124px;
+
+
+
+background: #F52929;
+
+border-radius: 5px;
+
+
+
+
+
+/* About Us */
+
+
+
+position: absolute;
+
+width: 259px;
+
+height: 12px;
+
+left: 952px;
+
+top: 203px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 600;
+
+font-size: 18px;
+
+line-height: 27px;
+
+text-align: center;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Sign up/Log in */
+
+
+
+position: absolute;
+
+width: 259px;
+
+height: 12px;
+
+left: 963px;
+
+top: 130px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 600;
+
+font-size: 18px;
+
+line-height: 27px;
+
+text-align: center;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Type 3 */
+
+
+
+position: absolute;
+
+width: 114.37px;
+
+height: 50px;
+
+left: 289px;
+
+top: 518px;
+
+
+
+
+
+
+
+/* Row 4 */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 358.19px;
+
+top: 518px;
+
+
+
+
+
+
+
+/* Telegram */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 358.19px;
+
+top: 518px;
+
+
+
+filter: drop-shadow(0px 12px 24px rgba(0, 0, 0, 0.1));
+
+
+
+
+
+/* Oval */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 358.19px;
+
+top: 518px;
+
+
+
+background: #45AEE4;
+
+
+
+
+
+/* Telegram */
+
+
+
+position: absolute;
+
+width: 20px;
+
+height: 20.06px;
+
+left: 370.19px;
+
+top: 532.75px;
+
+
+
+
+
+
+
+/* Shape */
+
+
+
+position: absolute;
+
+width: 20px;
+
+height: 20.06px;
+
+left: 370.19px;
+
+top: 532.75px;
+
+
+
+background: #2F303A;
+
+
+
+
+
+/* Path */
+
+
+
+position: absolute;
+
+width: 20px;
+
+height: 20.06px;
+
+left: 370.19px;
+
+top: 532.75px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Path */
+
+
+
+position: absolute;
+
+width: 9.68px;
+
+height: 11.73px;
+
+left: 376.22px;
+
+top: 536.87px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Shape */
+
+
+
+position: absolute;
+
+width: 9.68px;
+
+height: 11.73px;
+
+left: 376.22px;
+
+top: 536.87px;
+
+
+
+background: #EAEAEA;
+
+
+
+
+
+/* Row 2 */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 289px;
+
+top: 518.63px;
+
+
+
+
+
+
+
+/* Linkedin */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 289px;
+
+top: 518.63px;
+
+
+
+filter: drop-shadow(0px 12px 24px rgba(0, 0, 0, 0.1));
+
+
+
+
+
+/* Oval */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 289px;
+
+top: 518.63px;
+
+
+
+background: #007AB7;
+
+
+
+
+
+/* Linkedin */
+
+
+
+position: absolute;
+
+width: 16.22px;
+
+height: 17.72px;
+
+left: 303.48px;
+
+top: 533.82px;
+
+
+
+background: #2F303A;
+
+
+
+
+
+/* Exclude */
+
+
+
+position: absolute;
+
+width: 3.9px;
+
+height: 17.72px;
+
+left: 303.48px;
+
+top: 533.82px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Icon Part */
+
+
+
+position: absolute;
+
+width: 3.36px;
+
+height: 11.84px;
+
+left: 303.75px;
+
+top: 539.71px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Icon Part */
+
+
+
+position: absolute;
+
+width: 3.9px;
+
+height: 4.27px;
+
+left: 303.48px;
+
+top: 533.82px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Icon Part */
+
+
+
+position: absolute;
+
+width: 10.48px;
+
+height: 12.12px;
+
+left: 309.22px;
+
+top: 539.42px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Row 2 */
+
+
+
+position: absolute;
+
+width: 113.37px;
+
+height: 49.37px;
+
+left: 145px;
+
+top: 518px;
+
+
+
+
+
+
+
+/* Instagram */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 213.19px;
+
+top: 518px;
+
+
+
+filter: drop-shadow(0px 12px 24px rgba(0, 0, 0, 0.1));
+
+
+
+
+
+/* Oval */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 213.19px;
+
+top: 518px;
+
+
+
+background: linear-gradient(180.19deg, #7024C4 0.17%, #C21975 41.57%, #C74C4D 70.15%, #E09B3D 99.83%);
+
+box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
+
+
+
+
+/* Instagram */
+
+
+
+position: absolute;
+
+width: 19.7px;
+
+height: 21.52px;
+
+left: 225.93px;
+
+top: 531.92px;
+
+
+
+background: #2F303A;
+
+
+
+
+
+/* Shape */
+
+
+
+position: absolute;
+
+width: 19.7px;
+
+height: 21.52px;
+
+left: 225.93px;
+
+top: 531.92px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Shape */
+
+
+
+position: absolute;
+
+width: 15.73px;
+
+height: 17.19px;
+
+left: 227.91px;
+
+top: 534.09px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Shape */
+
+
+
+position: absolute;
+
+width: 10.19px;
+
+height: 11.13px;
+
+left: 230.68px;
+
+top: 537.12px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Shape */
+
+
+
+position: absolute;
+
+width: 6.23px;
+
+height: 6.8px;
+
+left: 232.66px;
+
+top: 539.28px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Oval-path */
+
+
+
+position: absolute;
+
+width: 2.44px;
+
+height: 2.67px;
+
+left: 239.66px;
+
+top: 535.83px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Youtube */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 145px;
+
+top: 518px;
+
+
+
+filter: drop-shadow(0px 12px 24px rgba(0, 0, 0, 0.1));
+
+
+
+
+
+/* Oval */
+
+
+
+position: absolute;
+
+width: 45.19px;
+
+height: 49.37px;
+
+left: 145px;
+
+top: 518px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* Youtube */
+
+
+
+position: absolute;
+
+width: 20.85px;
+
+height: 17.72px;
+
+left: 157.17px;
+
+top: 533.82px;
+
+
+
+background: #2F303A;
+
+
+
+
+
+/* Shape */
+
+
+
+position: absolute;
+
+width: 20.85px;
+
+height: 17.72px;
+
+left: 157.17px;
+
+top: 533.82px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Shape */
+
+
+
+position: absolute;
+
+width: 6.83px;
+
+height: 8.74px;
+
+left: 165.08px;
+
+top: 538.62px;
+
+
+
+background: #DADADA;
+
+
+
+
+
+/* Learn Freely */
+
+
+
+position: absolute;
+
+width: 293px;
+
+height: 33px;
+
+left: 145px;
+
+top: 345px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 600;
+
+font-size: 36px;
+
+line-height: 54px;
+
+
+
+color: #F52929;
+
+
+
+
+
+
+
+/* UKNO */
+
+
+
+position: absolute;
+
+width: 285px;
+
+height: 109px;
+
+left: 139px;
+
+top: 69px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 600;
+
+font-size: 96px;
+
+line-height: 144px;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Rectangle 23 */
+
+
+
+position: absolute;
+
+width: 223px;
+
+height: 72px;
+
+left: 145px;
+
+top: 197px;
+
+
+
+mix-blend-mode: hue;
+
+border-radius: 5px;
+
+
+
+
+
+/* CLUB */
+
+
+
+position: absolute;
+
+width: 243px;
+
+height: 72px;
+
+left: 157px;
+
+top: 187px;
+
+
+
+font-family: 'Roboto';
+
+font-style: normal;
+
+font-weight: 400;
+
+font-size: 96px;
+
+line-height: 112px;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Rectangle 24 */
+
+
+
+position: absolute;
+
+width: 250px;
+
+height: 78px;
+
+left: 150px;
+
+top: 203px;
+
+
+
+border: 7px solid #FFFFFF;
+
+border-radius: 10px;
+
+
+
+
+
+/* Group 1 */
+
+
+
+position: absolute;
+
+width: 214px;
+
+height: 281px;
+
+left: 400px;
+
+top: 74px;
+
+
+
+
+
+
+
+/* Untitled design (3) 4 */
+
+
+
+position: absolute;
+
+width: 214px;
+
+height: 281px;
+
+left: 400px;
+
+top: 74px;
+
+
+
+background: url(Untitled_design__2_-removebg-preview.png);
+
+
+
+
+
+/* Group 2 */
+
+
+
+position: absolute;
+
+width: 26px;
+
+height: 116.5px;
+
+left: 561px;
+
+top: 98px;
+
+
+
+
+
+
+
+/* Rectangle 25 */
+
+
+
+position: absolute;
+
+width: 26px;
+
+height: 116.5px;
+
+left: 561px;
+
+top: 98px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together. */
+
+
+
+position: absolute;
+
+width: 481px;
+
+height: 51px;
+
+left: 838px;
+
+top: 382px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 400;
+
+font-size: 16px;
+
+line-height: 24px;
+
+text-align: center;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Empowering Learners, Freely */
+
+
+
+position: absolute;
+
+width: 628px;
+
+height: 32px;
+
+left: 768px;
+
+top: 312px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 700;
+
+font-size: 36px;
+
+line-height: 54px;
+
+text-align: center;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* DataAnalytics */
+
+
+
+position: absolute;
+
+width: 130px;
+
+height: 69px;
+
+left: 58px;
+
+top: 679px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 400;
+
+font-size: 24px;
+
+line-height: 36px;
+
+text-transform: capitalize;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Untitled design (3) 10 */
+
+
+
+position: absolute;
+
+width: 58px;
+
+height: 81px;
+
+left: 173px;
+
+top: 673px;
+
+
+
+background: url(Untitled_design__2_-removebg-preview.png);
+
+
+
+
+
+/* Rectangle 39 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 217.5px;
+
+top: 679.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* Rectangle 90 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 217.5px;
+
+top: 679.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* AI &ML */
+
+
+
+position: absolute;
+
+width: 130px;
+
+height: 69px;
+
+left: 1078px;
+
+top: 679px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 400;
+
+font-size: 24px;
+
+line-height: 36px;
+
+text-transform: capitalize;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Untitled design (3) 14 */
+
+
+
+position: absolute;
+
+width: 58px;
+
+height: 81px;
+
+left: 1152px;
+
+top: 674px;
+
+
+
+background: url(Untitled_design__2_-removebg-preview.png);
+
+
+
+
+
+/* Rectangle 97 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 1196.5px;
+
+top: 680.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* Rectangle 98 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 1196.5px;
+
+top: 680.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* BigData */
+
+
+
+position: absolute;
+
+width: 130px;
+
+height: 69px;
+
+left: 829px;
+
+top: 680px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 400;
+
+font-size: 24px;
+
+line-height: 36px;
+
+text-transform: capitalize;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Untitled design (3) 13 */
+
+
+
+position: absolute;
+
+width: 58px;
+
+height: 81px;
+
+left: 900px;
+
+top: 674px;
+
+
+
+background: url(Untitled_design__2_-removebg-preview.png);
+
+
+
+
+
+/* Rectangle 95 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 944.5px;
+
+top: 680.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* Rectangle 96 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 944.5px;
+
+top: 680.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* DataScience */
+
+
+
+position: absolute;
+
+width: 130px;
+
+height: 69px;
+
+left: 556px;
+
+top: 679px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 400;
+
+font-size: 24px;
+
+line-height: 36px;
+
+text-transform: capitalize;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Untitled design (3) 12 */
+
+
+
+position: absolute;
+
+width: 58px;
+
+height: 81px;
+
+left: 669px;
+
+top: 673px;
+
+
+
+background: url(Untitled_design__2_-removebg-preview.png);
+
+
+
+
+
+/* Rectangle 93 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 713.5px;
+
+top: 679.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* Rectangle 94 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 713.5px;
+
+top: 679.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* BusinessAnalyst */
+
+
+
+position: absolute;
+
+width: 130px;
+
+height: 69px;
+
+left: 303px;
+
+top: 680px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 400;
+
+font-size: 24px;
+
+line-height: 36px;
+
+text-transform: capitalize;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Untitled design (3) 11 */
+
+
+
+position: absolute;
+
+width: 58px;
+
+height: 81px;
+
+left: 415px;
+
+top: 674px;
+
+
+
+background: url(Untitled_design__2_-removebg-preview.png);
+
+
+
+
+
+/* Rectangle 91 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 459.5px;
+
+top: 680.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* Rectangle 92 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 459.5px;
+
+top: 680.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* DeepLearning */
+
+
+
+position: absolute;
+
+width: 130px;
+
+height: 69px;
+
+left: 1306px;
+
+top: 679px;
+
+
+
+font-family: 'Poppins';
+
+font-style: normal;
+
+font-weight: 400;
+
+font-size: 24px;
+
+line-height: 36px;
+
+text-transform: capitalize;
+
+
+
+color: #FFFFFF;
+
+
+
+
+
+
+
+/* Untitled design (3) 15 */
+
+
+
+position: absolute;
+
+width: 58px;
+
+height: 81px;
+
+left: 1421px;
+
+top: 674px;
+
+
+
+background: url(Untitled_design__2_-removebg-preview.png);
+
+
+
+
+
+/* Rectangle 99 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 1465.5px;
+
+top: 680.5px;
+
+
+
+background: #F52929;
+
+
+
+
+
+/* Rectangle 100 */
+
+
+
+position: absolute;
+
+width: 8px;
+
+height: 34.5px;
+
+left: 1465.5px;
+
+top: 680.5px;
+
+
+
+background: #F52929;
+
